<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/pennkey_label"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />

            <EditText
                android:id="@+id/usertext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:inputType="textVisiblePassword"
                 />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/pennpwd_label"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary"
                 />

            <EditText
                android:id="@+id/passtext"
                android:layout_width="fill_parent"
                android:layout_marginBottom="6dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                 />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/hostname_label"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />

            <EditText
                android:id="@+id/hostname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:inputType="textUri"
                 />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/port_label"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary" />

            <EditText
                android:id="@+id/portname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <CheckBox
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveinfo_label" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical" >

            <Button
                android:id="@+id/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/login_btn_label" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>